ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 7.0.22, 6.0.25, 8.0.12
    • Affects Version/s: 4.2.25, 4.4.29, 6.0.20, 5.0.31, 8.0.5, 7.0.17
    • Component/s: None
    • None
    • Query Execution
    • Minor Change
    • ALL
    • v8.0, v7.0, v6.0
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When we retry the reproducer of SERVER-95523 in a transaction, the write succeeds on a second try violating the unique index. Understand the reason even though _opCtx->_ruState got set to RecoveryUnitState::kFailedUnitOfWork (and crashes the server in commit).

            Assignee:
            Evan Bergeron
            Reporter:
            Wei Hu
            Votes:
            0 Vote for this issue
            Watchers:
            14 Start watching this issue

              Created:
              Updated:
              Resolved: