SERVER-95524 Avoid retrying on duplicate key error for upserts in multidocument transactions (#30531)

GitOrigin-RevId: bb3fb622ebd501c297604b0efedd3376723cbd9f