src/mongo/db/query/write_ops/write_ops_exec.h
@@ -203,7 +203,8 @@ void recordUpdateResultInOpDebug(const UpdateResult& updateResult, OpDebug* opDe
 /**
  * Returns true if an update failure due to a given DuplicateKey error is eligible for retry.
  */
-bool shouldRetryDuplicateKeyException(const UpdateRequest& updateRequest,
+bool shouldRetryDuplicateKeyException(OperationContext* opCtx,
+                                      const UpdateRequest& updateRequest,
                                       const CanonicalQuery& cq,
                                       const DuplicateKeyErrorInfo& errorInfo,
                                       int retryAttempts);
