jstests/noPassthrough/query/update/upsert_bounded_retry.js
@@ -34,7 +34,6 @@ function main(conn) {
     const db = conn.getDB("test");
 
     // Partial index, non-transactional upsert and findAndModify.
-    //
     assert(db.test.drop());
     assert.commandWorked(
         db.test.createIndex({userId: 1}, {unique: true, partialFilterExpression: {indexed: true}}));
@@ -49,7 +48,6 @@ function main(conn) {
                           ErrorCodes.DuplicateKey);
 
     // Sparse index, non-transactional upsert and findAndModify.
-    //
     assert(db.test.drop());
     assert.commandWorked(db.test.createIndex({userId: 1}, {unique: true, sparse: true}));
     assert.commandWorked(db.test.insert({}));
@@ -61,6 +59,48 @@ function main(conn) {
         upsert: true,
     }),
                           ErrorCodes.DuplicateKey);
+    {
+        // Partial index, transactional upsert and findAndModify.
+        let session = conn.startSession();
+        let test = session.getDatabase('test').getCollection('test');
+        assert(test.drop());
+        assert.commandWorked(test.createIndex(
+            {userId: 1}, {unique: true, partialFilterExpression: {indexed: true}}));
+        assert.commandWorked(test.insert({userId: 1}));
+        assert.commandWorked(test.insert({userId: 1, indexed: true}));
+        session.startTransaction();
+        assert.writeError(test.update({userId: 1}, {$set: {indexed: true}}, {upsert: true}));
+        assert.throwsWithCode(() => session.commitTransaction(), ErrorCodes.NoSuchTransaction);
+        session.startTransaction();
+        assert.throwsWithCode(() => test.findAndModify({
+            query: {userId: 1},
+            update: {$set: {userId: 1, indexed: true}},
+            upsert: true,
+        }),
+                              ErrorCodes.DuplicateKey);
+        assert.throwsWithCode(() => session.commitTransaction(), ErrorCodes.NoSuchTransaction);
+    }
+
+    {
+        // Sparse index, transactional upsert and findAndModify.
+        let session = conn.startSession();
+        let test = session.getDatabase('test').getCollection('test');
+        assert(test.drop());
+        assert.commandWorked(test.createIndex({userId: 1}, {unique: true, sparse: true}));
+        assert.commandWorked(test.insert({}));
+        assert.commandWorked(test.insert({userId: null}));
+        session.startTransaction();
+        assert.writeError(test.update({userId: null}, {$set: {userId: null}}, {upsert: true}));
+        assert.throwsWithCode(() => session.commitTransaction(), ErrorCodes.NoSuchTransaction);
+        session.startTransaction();
+        assert.throwsWithCode(() => test.findAndModify({
+            query: {userId: null},
+            update: {$set: {userId: null}},
+            upsert: true,
+        }),
+                              ErrorCodes.DuplicateKey);
+        assert.throwsWithCode(() => session.commitTransaction(), ErrorCodes.NoSuchTransaction);
+    }
 }
 
 runOnReplsetAndShardedCluster(main);
